# VSP_news_analysis1

./: LICENSE  pyproject.toml
app/: main.py
data_scientist/data/preprocessing/: preprocessing_v2.ipynb
data_scientist/data/processed/: dataset_v2.3.json  dataset_v2.4.json  schema.json
data_scientist/data/processed/copy/: dataset_v2.1 copy.json  dataset_v2.2.json  dataset_v2.3.json  schema.json
data_scientist/data/raw/: temp.json
data_scientist/data/splits/test/: test_data.json
data_scientist/data/splits/train/: train_data.json
data_scientist/data/splits/val/: val_data.json
data_scientist/experiments/: README.md  preprocessing_v1.ipynb
data_scientist/notebooks/: count_class.ipynb
data_scientist/promts/: promt.txt
data_scientist/scripts/: array_object.ipynb  del_creditors.ipynb  indexing.ipynb  split_data.ipynb  validate_schema.ipynb
