[project]
name = "vsp-news-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Bak6628",email = "sasha.bakat@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
